tests/dataset/tpc-ds/compiler/c/q73.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:45Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:45Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *c_last_name;
  const char *c_first_name;
  const char *c_salutation;
  const char *c_preferred_cust_flag;
  int ss_ticket_number;
  int cnt;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_ticket_number;
  int ss_customer_sk;
  int ss_sold_date_sk;
  int ss_store_sk;
  int ss_hdemo_sk;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_dom;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int s_store_sk;
  const char *s_county;
} store_t;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int hd_demo_sk;
  const char *hd_buy_potential;
  int hd_vehicle_count;
  int hd_dep_count;
} household_demographic_t;
typedef struct {
  int len;
  household_demographic_t *data;
} household_demographic_list_t;
household_demographic_list_t create_household_demographic_list(int len) {
  household_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(household_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_customer_sk;
  const char *c_last_name;
  const char *c_first_name;
  const char *c_salutation;
  const char *c_preferred_cust_flag;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  map_string_int key;
  int cnt;
} groups_item_t;
typedef struct {
  int len;
  groups_item_t *data;
} groups_item_list_t;
groups_item_list_t create_groups_item_list(int len) {
  groups_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(groups_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *c_last_name;
  const char *c_first_name;
  const char *c_salutation;
  const char *c_preferred_cust_flag;
  int ss_ticket_number;
  int cnt;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q73_simplified_result;
static void test_TPCDS_Q73_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.c_last_name = "Smith",
                            .c_first_name = "Alice",
                            .c_salutation = "Ms.",
                            .c_preferred_cust_flag = "Y",
                            .ss_ticket_number = 1,
                            .cnt = 1}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q73_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q73_simplified_result.len; i3++) {
      if (test_TPCDS_Q73_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.ss_ticket_number = 1,
                                               .ss_customer_sk = 1,
                                               .ss_sold_date_sk = 1,
                                               .ss_store_sk = 1,
                                               .ss_hdemo_sk = 1}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_dom = 1, .d_year = 1998}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  store_t store[] = {(store_t){.s_store_sk = 1, .s_county = "A"}};
  int store_len = sizeof(store) / sizeof(store[0]);
  household_demographic_t household_demographics[] = {
      (household_demographic_t){.hd_demo_sk = 1,
                                .hd_buy_potential = "1001-5000",
                                .hd_vehicle_count = 2,
                                .hd_dep_count = 3}};
  int household_demographics_len =
      sizeof(household_demographics) / sizeof(household_demographics[0]);
  customer_t customer[] = {(customer_t){.c_customer_sk = 1,
                                        .c_last_name = "Smith",
                                        .c_first_name = "Alice",
                                        .c_salutation = "Ms.",
                                        .c_preferred_cust_flag = "Y"}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  groups_item_list_t groups = (groups_item_list_t){0, NULL};
  result_item_list_t tmp4 =
      result_item_list_t_create(groups.len * customer.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < groups.len; tmp6++) {
    groups_item_t g = groups.data[tmp6];
    for (int tmp7 = 0; tmp7 < customer_len; tmp7++) {
      customer_t c = customer[tmp7];
      if (!(c.c_customer_sk == g.key.cust)) {
        continue;
      }
      if (!(g.cnt >= 1 && g.cnt <= 5)) {
        continue;
      }
      tmp4.data[tmp5] =
          (result_item_t){.c_last_name = c.c_last_name,
                          .c_first_name = c.c_first_name,
                          .c_salutation = c.c_salutation,
                          .c_preferred_cust_flag = c.c_preferred_cust_flag,
                          .ss_ticket_number = g.key.ticket,
                          .cnt = g.cnt};
      tmp5++;
    }
  }
  tmp4.len = tmp5;
  result_item_list_t result = tmp4;
  printf("[");
  for (int i8 = 0; i8 < result.len; i8++) {
    if (i8 > 0)
      printf(",");
    result_item_t it = result.data[i8];
    printf("{");
    _json_string("c_last_name");
    printf(":");
    _json_string(it.c_last_name);
    printf(",");
    _json_string("c_first_name");
    printf(":");
    _json_string(it.c_first_name);
    printf(",");
    _json_string("c_salutation");
    printf(":");
    _json_string(it.c_salutation);
    printf(",");
    _json_string("c_preferred_cust_flag");
    printf(":");
    _json_string(it.c_preferred_cust_flag);
    printf(",");
    _json_string("ss_ticket_number");
    printf(":");
    _json_int(it.ss_ticket_number);
    printf(",");
    _json_string("cnt");
    printf(":");
    _json_int(it.cnt);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q73_simplified_result = result;
  test_TPCDS_Q73_simplified();
  return 0;
}
